--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,12 @@
 <resources>
     <string name="app_name">Bug Koops</string>
-    <string name="action_settings">Settings</string>
     <string name="title_activity_scanner">ScannerActivity</string>
 
     <string name="scan">Scan</string>
+
+    <string name="action_options">Options</string>
+    <string name="action_profiles">Profiles</string>
+    <string name="action_reports">Reports</string>
+    <string name="action_settings">Settings</string>
+    <string name="action_about">About</string>
 </resources>
