--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,15 @@
     <string name="action_about">About</string>
 
 
+    <string name="about_description">Bug reporting application from encoded QR codes</string>
+    <string name="about_credits">
+        <b>Special credits goes to:</b>\n
+            - <a href="https://github.com/zxing/zxing/">ZXing</a> and <a href="https://github.com/journeyapps/zxing-android-embedded">ZXing Android Embedded</a> for barcode decoding\n
+            - Google for Android <a href="https://www.google.com/design/icons/">System icons</a>\n
+        \n
+        <b>Sponsored by</b> <a href="http://www.intel.com">Intel</a>\n
+    </string>
+
     <string name="pref_category_scanner_label">Scanner</string>
 
     <string name="pref_invertcolors_label">Invert colors</string>
