Added reset to default settings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,4 +71,11 @@
     <string name="pref_fullscreen_key" translatable="false">fullscreen</string>
     <string name="pref_fullscreen_default" translatable="false">true</string>
 
+    <string name="pref_resettodefault_label_title">Reset to default</string>
+    <string name="pref_resettodefualt_label_summary">Reset all settings to their initial values.</string>
+    <string name="pref_resettodefault_label_message">Revert all values to their defaults?</string>
+    <string name="pref_resettodefault_label_negative">No</string>
+    <string name="pref_resettodefault_label_positive">Yes</string>
+    <string name="pref_resettodefault_key" translatable="false">resetToDefault</string>
+
 </resources>
