--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Bug Koops</string>
     <string name="title_activity_scanner">Scanner</string>
     <string name="title_activity_settings">Settings</string>
+    <string name="title_activity_report">Reports</string>
 
     <string name="scan">Scan</string>
 
@@ -77,5 +78,7 @@
     <string name="pref_resettodefault_label_negative">No</string>
     <string name="pref_resettodefault_label_positive">Yes</string>
     <string name="pref_resettodefault_key" translatable="false">resetToDefault</string>
+
+    <string name="content_authority" translatable="false">com.intel.bugkoops</string>
 
 </resources>
