--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,13 +6,14 @@
     <string name="title_activity_report_detail">Report details</string>
 
     <string name="scan">Scan</string>
+    <string name="delete">Delete</string>
+    <string name="select_all">Select all</string>
 
     <string name="action_options">Options</string>
     <string name="action_profiles">Profiles</string>
     <string name="action_reports">Reports</string>
     <string name="action_settings">Settings</string>
     <string name="action_about">About</string>
-
 
     <string name="about_description">Bug reporting application from encoded QR codes</string>
     <string name="about_credits">
