--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="scan">Scan</string>
     <string name="delete">Delete</string>
     <string name="select_all">Select all</string>
+    <string name="save">Save</string>
+    <string name="send">Send</string>
 
     <string name="action_options">Options</string>
     <string name="action_profiles">Profiles</string>
