--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,8 @@
 
     <string name="dialog_positive">Yes</string>
     <string name="dialog_negative">No</string>
-    <string name="dialog_delete_question">Are you sure you want to delete these reports?</string>
+    <string name="dialog_delete_reports_question">Are you sure you want to delete these reports?</string>
+    <string name="dialog_delete_report_question">Are you sure you want to delete this report?</string>
 
     <string name="pref_category_scanner_label">Scanner</string>
 
