--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="dialog_negative">No</string>
     <string name="dialog_delete_reports_question">Are you sure you want to delete these reports?</string>
     <string name="dialog_delete_report_question">Are you sure you want to delete this report?</string>
+    <string name="dialog_save_report_question">Are you sure you want to overwrite this report?</string>
 
     <string name="pref_category_scanner_label">Scanner</string>
 
