--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="title_activity_settings">Settings</string>
     <string name="title_activity_report">Reports</string>
     <string name="title_activity_report_detail">Report details</string>
+    <string name="title_activity_bugzilla_send">Send report to Bugzilla</string>
 
     <string name="scan">Scan</string>
     <string name="delete">Delete</string>
@@ -111,4 +112,5 @@
     <string name="pref_resettodefault_key" translatable="false">resetToDefault</string>
 
     <string name="content_authority" translatable="false">com.intel.bugkoops</string>
+
 </resources>
