ReportListFragment: moved UI strings to xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,4 +140,6 @@
     <string name="bugzilla_send_activity_default_priority">Please select bug priority &#8230;</string>
     <string name="bugzilla_send_activity_default_severity">Please select bug severity &#8230;</string>
 
+    <string name="report_list_fragment_word_selected">Selected</string>
+
 </resources>
